--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,5 @@
 name: Deployment (Container)
-on:
-  push:
-    branches:
-      - main
-      - dev
+on: push
 env:
   CACHE_KEY: node-deps
   MONGODB_DB_NAME: gha-demo
